--- a/style.css
+++ b/style.css
@@ -183,18 +183,21 @@ header a:hover{
     text-align: center;
     flex-direction: column;
     height: 90vh;
-    color: white;
+
+    color: rgb(163, 163, 163);
     background-image: linear-gradient(
         0deg,
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
+        
     )
-    ,url("img/Logo.png");
     
-
+    ,url("img/.jpeg");
+    
 }
 #compra-ya h2{
     font-size: 9vw;
+    color: white;
 }
 
 #final button{
